# Prowtein

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.claude/: settings.local.json
desktop/: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ExportDialog.tsx  FoodFormDialog.tsx  LibraryView.tsx  MealRow.tsx  QuickAdd.tsx  Ring.tsx  SettingsDialog.tsx  Sidebar.tsx  TodayView.tsx  TopBar.tsx  WelcomeDialog.tsx
desktop/src/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx
desktop/src/lib/: calculator.ts  db.ts  export.ts  format.ts  i18n.ts  platform.ts  store.ts  types.ts
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/changelog/: page.tsx
web/app/downloaded/: page.tsx
web/app/impressum/: page.tsx
web/app/privacy/: page.tsx
web/components/: AppUI.tsx  ChangelogContent.tsx  Demo.tsx  Download.tsx  DownloadedContent.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Philosophy.tsx  Showcase.tsx
web/components/ui/: Flags.tsx  LanguageSwitcher.tsx  Ring.tsx  SectionHead.tsx
web/lib/: LangContext.tsx  changelog.ts  i18n.ts
