[package]
name = "prowtein"
version = "0.1.0"
description = "Prowtein — a minimal, local-first desktop nutrition tracker."
authors = ["Eray Cevik"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# The `_lib` suffix avoids a name collision with the binary on Windows.
[lib]
name = "prowtein_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
